--- a/src/CSS/Team.css
+++ b/src/CSS/Team.css
@@ -11,9 +11,10 @@
 
 .team .coordinators {
   display: flex;
-  justify-content: space-around;
   flex-wrap: wrap;
-  gap: 10px;
+  justify-content: center;
+  margin-top: 30px;
+  gap: 50px;
 }
 
 .team .coordinator {
@@ -21,7 +22,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 50vw;
+  width: 240px;
 }
 
 .team .coordinator-image {
